# markdownviewer

./: .gitignore  Makefile  README.md  index.html  package.json  tailwind.config.js  vite.config.ts
docs/: fix-black-overlay-issue.md
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: fs.rs
src/adapters/: index.ts  tauri.adapter.ts  types.ts  web.adapter.ts
src/components/editor/: EditorContainer.vue  EditorToolbar.vue
src/components/filetree/: FileTree.vue  FileTreeNode.vue
src/components/layout/: AppLayout.vue  StatusBar.vue
src/components/outline/: Outline.vue
src/components/tabs/: TabBar.vue  TabItem.vue
src/composables/: useEditor.ts  useExport.ts  useFileSystem.ts  useTheme.ts
src/stores/: filetree.store.ts  settings.store.ts  tabs.store.ts
src/styles/: editor.css  main.css
src/styles/themes/: dark.css  light.css
src/types/: file.ts  tab.ts
